added user_profile page/data

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,7 @@
 <html>
 	<body>
 		<%include partials/logout%>
+		<button><a href="/user_profile">Go to Profile</a></button>
 		<h1>HOme</h1>
 		<h3>Welcome <%=name%></h3>
 		<h2 id="community_header">Node Connect Statuses</h2>
