--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -14,6 +14,7 @@
                                 <img src="/profile_images/<%=friend.profile_pic%>" alt="">
                             </div>
                             <span><%=friend.friend_name%></span><br>
+                            <button type="button" onclick="window.location.href ='/user_profile/<%=friend._id%>'">Go To Profile</button>
                         </div>
                     </li>
                 <%})%>
