--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -155,8 +155,18 @@
         $(document).on('click', ".chat_close", function() {
             $(".chat_section").remove();
         })
+
         socket.on('message_from_server', function(received_msg) {
-            console.log(JSON.stringify(received_msg.msg));
+            $(".all_chat_messages").append("<div class='usr_msg'>" + "<span class='user_with_message'>" + received_msg.user_name + "</span>" + "<div class='usr_msg_box'><p>" + received_msg.msg + "</p>" + "</div>" + "</div>")
+        })
+
+        $(document).on('keypress', "#send_message_input", function(e) {
+            if(e.keyCode === 13) {
+                var chat_message_content = $(this).val();
+                $(".all_chat_messages").append("<div class='usr_msg'>" + "<span class='user_with_message'>You</span>" + "<div class='usr_msg_box'><p>" + chat_message_content + "</p>" + "</div>" + "</div>")
+                socket.emit('message_from_client', {"msg": chat_message_content, "friend_id": $(".chat_button").attr('id')});
+                $(this).val('')
+            }
         })
     </script>
     </body>
